# web-service-data-acquisition

./: .gitignore  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  tox.ini
docs/: api.rst  conf.py  design.rst  index.rst  overview.rst
docs/_plantuml/: classes_DataAcquisition.plantuml  classes_WebDataAcquisition.plantuml  packages_DataAcquisition.plantuml  packages_WebDataAcquisition.plantuml
src/: acquire.py  csv_extract.py  kaggle_client.py  model.py  webpage_client.py
tests/: environment.py  mock_kaggle_bottle.py  mock_kaggle_server.py  test_kaggle_client.py  test_model.py
tests/features/: acquire.feature  dataset_download.feature
tests/steps/: cli_interface.py  fake_cli_steps.py
